[B]1.0.1[/B]
- Added Tv Show name to video info screen.
- Added Add-ons node to settings screen.
- Added navigation arrows in ShowCase nav-help.
- Fixed subtitle screen losing focus.
- Fixed misaligned busy icon.
- Fixed misaligned mute icon.
- Fixed wrong uppercasing of special characters - thx Mikebzh44.

[B]0.0.7[/B]
- Updated language files from Transifex

[B]0.0.6[/B]
- Updated language files from Transifex

﻿[B][0.0.5][/B]
- Initial release