@@ -3,7 +3,6 @@
 	<defaultcontrol always="true">4</defaultcontrol>
 	<controls>
         <control type="group">
-            <animation effect="slide" start="0" end="120" time="500" tween="cubic" easing="out" delay="200" condition="Window.IsVisible(videobookmarks)">Conditional</animation>
             <animation effect="slide" start="120" end="0" time="200" tween="cubic" easing="out">WindowOpen</animation>
             <animation effect="slide" start="0" end="120" time="200" tween="cubic" easing="out">WindowClose</animation>
             <control type="image">
@@ -196,7 +195,6 @@
         </control>
 
         <control type="group">
-            <animation effect="slide" start="0" end="-120" time="500" tween="cubic" easing="out" delay="200" condition="Window.IsVisible(videobookmarks)">Conditional</animation>
             <animation effect="slide" start="-120" end="0" time="200" tween="cubic" easing="out">WindowOpen</animation>
             <animation effect="slide" start="0" end="-120" time="200" tween="cubic" easing="out">WindowClose</animation>
             <control type="image">
@@ -345,14 +343,12 @@
                 <width>1920</width>
                 <height>280</height>
                 <texture>views/landscape/shade.png</texture>
-                <visible>!Player.ShowInfo</visible>
             </control>
 
 
             <control type="group">
                 <posx>0</posx>
                 <posy>984</posy>
-                <visible>!Player.ShowInfo</visible>
                 <control type="label">
                     <posx>256</posx>
                     <posy>0</posy>
