@@ -396,7 +396,7 @@
                 <animation effect="slide" start="0,-110" end="0,0" time="500" tween="cubic" easing="out">WindowOpen</animation>
                 <animation effect="slide" start="0,-110" end="0,0" time="500" tween="cubic" easing="out">VisibleChange</animation>
                 <animation effect="slide" end="0,-110" start="0,0" time="500" tween="cubic" easing="out">WindowClose</animation>
-                <visible>Player.ShowInfo + ![Window.IsVisible(VisualisationSettings) | Window.IsVisible(VisualisationPresetList)]</visible>
+                <visible>Player.ShowInfo + ![Window.IsVisible(VisualisationSettings) | Window.IsVisible(VisualisationPresetList) | Window.IsVisible(musicosd)]</visible>
                 <control type="image">
                     <posx>0</posx>
                     <posy>72</posy>
@@ -423,37 +423,19 @@
                     <control type="button">
                         <posx>0</posx>
                         <posy>0</posy>
-                        <width>15</width>
-                        <height>48</height>
-                        <texturenofocus>-</texturenofocus>
-                        <texturefocus>-</texturefocus>
-                        <onclick>noop</onclick>
-                        <enable>no</enable>
-                    </control>
-                    <control type="label">
-                        <posy>0</posy>
-                        <posx>0</posx>
-                        <height>68</height>
-                        <width min="10" max="270">auto</width>
+                        <width>250</width>
+                        <height>67</height>
                         <font>Clock</font>
-                        <aligny>center</aligny>
-                        <textcolor>White2</textcolor>
+                        <align>left</align>
                         <label>$INFO[Player.Time]</label>
-                    </control>
-                    <control type="button">
-                        <posx>0</posx>
-                        <posy>0</posy>
-                        <width>15</width>
-                        <height>48</height>
-                        <texturenofocus>-</texturenofocus>
-                        <texturefocus>-</texturefocus>
-                        <onclick>noop</onclick>
+                        <disabledcolor>White2</disabledcolor>
+                        <textoffsetx>15</textoffsetx>
                         <enable>no</enable>
                     </control>
                     <control type="button">
                         <posx>0</posx>
                         <posy>0</posy>
-                        <width>1555</width>
+                        <width>1420</width>
                         <height>72</height>
                         <font>Medium_Caps</font>
                         <onclick>noop</onclick>
@@ -463,60 +445,16 @@
                         <textoffsetx>15</textoffsetx>
                         <enable>no</enable>
                     </control>
-                    <control type="image">
-                        <posx>0</posx>
-                        <posy>0</posy>
-                        <width>2</width>
-                        <height>72</height>
-                        <texture>dialogs/toast_back_blue_border.png</texture>
-                    </control>
                     <control type="button">
                         <posx>0</posx>
                         <posy>0</posy>
-                        <width>15</width>
-                        <height>48</height>
-                        <texturenofocus>-</texturenofocus>
-                        <texturefocus>-</texturefocus>
-                        <onclick>noop</onclick>
-                        <enable>no</enable>
-                    </control>
-                    <control type="label">
-                        <posy>0</posy>
-                        <posx>0</posx>
-                        <height>68</height>
-                        <width min="10" max="200">auto</width>
+                        <width>250</width>
+                        <height>67</height>
                         <font>Clock</font>
                         <align>right</align>
-                        <aligny>center</aligny>
-                        <textcolor>White2</textcolor>
                         <label>$VAR[TimeRemainingVar]</label>
-                    </control>
-                    <control type="button">
-                        <posx>0</posx>
-                        <posy>0</posy>
-                        <width>15</width>
-                        <height>48</height>
-                        <texturenofocus>-</texturenofocus>
-                        <texturefocus>-</texturefocus>
-                        <onclick>noop</onclick>
-                        <enable>no</enable>
-                    </control>
-                </control>
-                <control type="grouplist" >
-                    <posx>0</posx>
-                    <posy>0</posy>
-                    <width>1920</width>
-                    <align>right</align>
-                    <itemgap>0</itemgap>
-                    <orientation>horizontal</orientation>
-                    <control type="button">
-                        <posx>0</posx>
-                        <posy>0</posy>
-                        <width>32</width>
-                        <height>48</height>
-                        <texturenofocus>-</texturenofocus>
-                        <texturefocus>-</texturefocus>
-                        <onclick>noop</onclick>
+                        <disabledcolor>White2</disabledcolor>
+                        <textoffsetx>15</textoffsetx>
                         <enable>no</enable>
                     </control>
                 </control>
@@ -567,7 +505,7 @@
                 <animation effect="slide" start="0,128" end="0,0" time="500" tween="cubic" easing="out">WindowOpen</animation>
                 <animation effect="slide" end="0,128" start="0,0" time="500" tween="cubic" easing="out">WindowClose</animation>
                 <animation effect="slide" start="0,128" end="0,0" time="500" tween="cubic" easing="out">VisibleChange</animation>
-                <visible>Player.ShowInfo + ![Window.IsVisible(VisualisationSettings) | Window.IsVisible(VisualisationPresetList)]</visible>
+                <visible>Player.ShowInfo + ![Window.IsVisible(VisualisationSettings) | Window.IsVisible(VisualisationPresetList) | Window.IsVisible(musicosd)]</visible>
                 <include>FloorFlagsBack</include>
                 <control type="image">
                     <posx>1470</posx>
