@@ -6,6 +6,7 @@
 - Fixed misaligned busy icon.
 - Fixed misaligned mute icon.
 - Fixed wrong uppercasing of special characters - thx Mikebzh44.
+- Fixed overlapping player time on music info.
 
 [B]0.0.7[/B]
 - Updated language files from Transifex
